--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 	</dependencies>
 
 	<build>
+	<finalName>docker-jenkins-integration</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
