--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
+	<!-- Demo on Github Webhooks -->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
