--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 		<java.version>17</java.version>
 	</properties>
 
-	<!-- Demo on Github Webhooks -->
+	<!-- Demo on Github Webhooks demo-->
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
